# exchange-aggregator

./: .gitignore  Cargo.toml  Dockerfile  README.md  settings.json.sample
.github/workflows/: master.yml
src/: aggregator.rs  exchange.rs  main.rs  prelude.rs
src/exchanges/: binance.rs  bitfinex.rs  bittrex.rs  exmo.rs  gate_io.rs  hit_btc.rs  live_coin.rs  mod.rs  okex.rs  p2pb2b.rs  polonex.rs  yobit.rs
