[package]
name = "exchange-aggregator"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
clap = "2.33"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.hashbrown]
version = "0.6"
features = ["serde"]

[dependencies.config]
version = "0.9"
features = ["json"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]
